--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ input[type=password]:focus {
 }
 
 .eye {
-  background-image: url(/images/eye.svg);
+  background-image: url(images/eye.svg);
   position: absolute;
   width: 20px;
   height: 20px;
